Very basic Scheduler.

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,3 +11,8 @@ per-file-ignores =
     */settings.py:E501
 max-complexity = 10
 max-line-length = 119
+
+[scheduler]
+# tick is a basic time is seconds. All 'sleep' calls should depend on this tick.
+# You can make it bigger or lower.
+tick = 0.5
