--- a/setup.cfg
+++ b/setup.cfg
@@ -16,3 +16,6 @@ max-line-length = 119
 # tick is a basic time is seconds. All 'sleep' calls should depend on this tick.
 # You can make it bigger or lower.
 tick = 0.5
+
+[job]
+max_id_length = 42
