--- a/setup.cfg
+++ b/setup.cfg
@@ -13,9 +13,10 @@ max-complexity = 10
 max-line-length = 119
 
 [scheduler]
-# tick is a basic time is seconds. All 'sleep' calls should depend on this tick.
+# Tick is a basic time is seconds. All 'sleep' calls should depend on this tick.
 # You can make it bigger or lower.
 tick = 0.5
 
 [job]
+# The max length of an identifier of a process (+few digits will be added on the right)
 max_id_length = 42
