--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,12 @@ per-file-ignores =
 max-complexity = 10
 max-line-length = 119
 
+[tool:pytest]
+# Flags: -s - to show all script's output;
+#        -v - to show a bit more information
+addopts = -sv  tests/test_integration.py
+pythonpath = .
+
 [scheduler]
 # Tick is a basic time is seconds. All 'sleep' calls should depend on this tick.
 # You can make it bigger or lower.
