--- a/setup.cfg
+++ b/setup.cfg
@@ -12,10 +12,17 @@ per-file-ignores =
 max-complexity = 10
 max-line-length = 119
 
+[tool:pytest]
+# Flags: -s - to show all script's output;
+#        -v - to show a bit more information
+addopts = -sv  tests/test_integration.py
+pythonpath = .
+
 [scheduler]
-# tick is a basic time is seconds. All 'sleep' calls should depend on this tick.
+# Tick is a basic time is seconds. All 'sleep' calls should depend on this tick.
 # You can make it bigger or lower.
 tick = 0.5
 
 [job]
+# The max length of an identifier of a process (+few digits will be added on the right)
 max_id_length = 42
