--- a/setup.cfg
+++ b/setup.cfg
@@ -15,8 +15,8 @@ max-line-length = 119
 [tool:pytest]
 # Flags: -s - to show all script's output;
 #        -v - to show a bit more information
-# next argument is any specific directory like # tests/unit_tests/test_test_integration.py
-addopts = -sv
+# next argument is any specific directory like # tests/test_integration.py
+addopts = -sv tests/test_integration.py
 pythonpath = .
 
 [scheduler]
