--- a/setup.cfg
+++ b/setup.cfg
@@ -16,12 +16,12 @@ max-line-length = 119
 # Flags: -s - to show all script's output;
 #        -v - to show a bit more information
 # next argument is any specific directory like # tests/test_integration.py
-addopts = -sv tests/test_integration.py
+addopts = -sv
 pythonpath = .
 
 [scheduler]
-# Tick is a basic time is seconds. All 'sleep' calls should depend on this tick.
-# You can make it bigger or lower.
+# 'tick' is a basic time is seconds. All 'sleep' calls should depend on this tick.
+# It may be made bigger or lower.
 tick = 0.5
 
 [job]
