--- a/setup.cfg
+++ b/setup.cfg
@@ -10,3 +10,20 @@ exclude =
 per-file-ignores =
     */settings.py:E501
 max-complexity = 10
+max-line-length = 119
+
+[tool:pytest]
+# Flags: -s - to show all script's output;
+#        -v - to show a bit more information
+# next argument is any specific directory like # tests/test_integration.py
+addopts = -sv
+pythonpath = .
+
+[scheduler]
+# 'tick' is a basic time is seconds. All 'sleep' calls should depend on this tick.
+# It may be made bigger or lower.
+tick = 0.5
+
+[job]
+# The max length of an identifier of a process (+few digits will be added on the right)
+max_id_length = 42
