the thread for __run and the Event "safeword" are added. These are the basics for stopping Scheduler by scheduler.stop()

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,8 +15,8 @@ max-line-length = 119
 [tool:pytest]
 # Flags: -s - to show all script's output;
 #        -v - to show a bit more information
-# next argument is any specific directory like # tests/test_integration.py
-addopts = -sv
+# next argument is any specific directory and test like # tests/test_integration.py::test_3jobs
+addopts = -sv tests/test_integration.py::test_3jobs
 pythonpath = .
 
 [scheduler]
