--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ max-line-length = 119
 # Flags: -s - to show all script's output;
 #        -v - to show a bit more information
 # next argument is any specific directory and test like # tests/test_integration.py::test_3jobs
-addopts = -sv tests/test_integration.py::test_3jobs
+addopts = -sv --pdbcls=IPython.terminal.debugger:TerminalPdb tests/test_integration.py::test_3jobs
 pythonpath = .
 
 [scheduler]
