pymdownx.snippets extension is added. So, now index.html is generated automatically and it is not a symlink anymore.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,10 @@ plugins:
             docstring_style: numpy
   - search
 
+markdown_extensions:
+  - pymdownx.snippets:
+      base_path: ["."]
+
 nav:
   - Главная: index.md
   - Как запускать этот проект: how-to-guides.md
