initial code for restart process. restart includes restore and (re)run.

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,8 @@ pythonpath = .
 # 'tick' is a basic time is seconds. All 'sleep' calls should depend on this tick.
 # It may be made bigger or lower.
 tick = 0.5
+# full path except for the extension at the end
+backup = backup/backup
 
 [job]
 # The max length of an identifier of a process (+few digits will be added on the right)
