--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,8 @@ max-line-length = 119
 # Flags: -s - to show all script's output;
 #        -v - to show a bit more information
 # next argument is any specific directory and test like # tests/test_integration.py::test_3jobs
-addopts = -sv --pdbcls=IPython.terminal.debugger:TerminalPdb tests/conftest.py::test_actions_before_all_tests tests/test_integration.py::test_a_stop
+# addopts = -sv --pdbcls=IPython.terminal.debugger:TerminalPdb tests/conftest.py::test_actions_before_all_tests tests/test_integration.py::test_a_stop
+addopts = -sv tests/test_fs_web_multi.py::test_web_job1
 pythonpath = .
 
 [scheduler]
@@ -29,3 +30,7 @@ backup = backup/backup
 [job]
 # The max length of an identifier of a process (+few digits will be added on the right)
 max_id_length = 42
+
+[tests]
+# temporary folder for results of tests
+tmp_folder = tmp
