--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ max-line-length = 119
 #        -v - to show a bit more information
 # next argument is any specific directory and test like # tests/test_integration.py::test_3jobs
 # addopts = -sv --pdbcls=IPython.terminal.debugger:TerminalPdb tests/conftest.py::test_actions_before_all_tests tests/test_integration.py::test_a_stop
-addopts = -sv tests/test_fs_web_multi.py::test_web_job
+addopts = -sv tests/conftest.py tests/test_fs.py::test_fs
 pythonpath = .
 
 [scheduler]
