Scenario is added: do_jobs_sequentially

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ max-line-length = 119
 # next argument is any specific directory and test like # tests/test_integration.py::test_3jobs
 # addopts = -sv --pdbcls=IPython.terminal.debugger:TerminalPdb tests/conftest.py::test_actions_before_all_tests tests/test_integration.py::test_a_stop
 # tests/test_fs.py::test_fs_directories tests/test_web.py::test_web_job  tests/test_integration.py::test_a_stop
-addopts = -sv tests/conftest.py tests/test_fs.py::test_fs_files
+addopts = -sv tests/conftest.py tests/test_fs.py
 pythonpath = .
 
 [scheduler]
