Feature 2: stop-backup-restore is written and works; all required tests are written and work;   (#5)
* The wrap for _Scheduler is created. Now Scheduler creates a process with _Scheduler. And the stop is been able to be called.

* backup function. it saves everything except for the function body itself.

* pymdownx.snippets extension is added. So, now index.html is generated automatically and it is not a symlink anymore.

* code for restart process. restart includes restore and (re)run.

* __restore function is ready 

* all types of arguments are added in test for Job. Now __restore parses all these arguments well.

* pickled functions are being loaded and executed well!

* multi-city web_job test is written

* Handling of Exception is added in Job and in Scheduler. An exception-raising test is added too (test_web_job).

* join is added in Scheduler ; site is rebuilt; how-to guide is written;

* basic test for filesystem and creating directories is created

* flake8 and mypy .

* tests for creating, changing and reading files were created.

* Scenario is added: do_jobs_sequentially

* test multi_job is created

* the site is updated

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,15 +15,23 @@ max-line-length = 119
 [tool:pytest]
 # Flags: -s - to show all script's output;
 #        -v - to show a bit more information
-# next argument is any specific directory like # tests/test_integration.py
-addopts = -sv
+# next argument is any specific directory and test like # tests/test_integration.py::test_3jobs
+# addopts = -sv --pdbcls=IPython.terminal.debugger:TerminalPdb tests/conftest.py::test_actions_before_all_tests tests/test_integration.py::test_a_stop
+# tests/test_fs.py::test_fs_directories tests/test_web.py::test_web_job  tests/test_integration.py::test_a_stop
+addopts = -sv tests/conftest.py tests/test_multi.py
 pythonpath = .
 
 [scheduler]
 # 'tick' is a basic time is seconds. All 'sleep' calls should depend on this tick.
 # It may be made bigger or lower.
 tick = 0.5
+# full path except for the extension at the end
+backup = backup/backup
 
 [job]
 # The max length of an identifier of a process (+few digits will be added on the right)
 max_id_length = 42
+
+[tests]
+# temporary folder for results of tests
+tmp_folder = tmp
