--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,9 @@ per-file-ignores =
 max-complexity = 10
 max-line-length = 119
 
+[mypy]
+exclude = venv
+
 [tool:pytest]
 # Flags: -s - to show all script's output;
 #        -v - to show a bit more information
