--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ max-complexity = 10
 max-line-length = 119
 
 [mypy]
-exclude = venv
+exclude = tests
 
 [tool:pytest]
 # Flags: -s - to show all script's output;
