--- a/setup.cfg
+++ b/setup.cfg
@@ -12,18 +12,31 @@ per-file-ignores =
 max-complexity = 10
 max-line-length = 119
 
+[mypy]
+exclude = tests
+
 [tool:pytest]
 # Flags: -s - to show all script's output;
 #        -v - to show a bit more information
-# next argument is any specific directory like # tests/test_integration.py
-addopts = -sv
+# addopts = -sv --pdbcls=IPython.terminal.debugger:TerminalPdb is a special debugger
+# next argument is any specific directory and a test like tests/test_integration.py::test_3jobs
+addopts = -sv tests/conftest.py
+            tests/unit_tests tests/test_calculations.py
+            tests/test_web.py tests/test_fs.py
+            tests/test_multi.py
 pythonpath = .
 
 [scheduler]
-# 'tick' is a basic time is seconds. All 'sleep' calls should depend on this tick.
-# It may be made bigger or lower.
+# `tick` is a basic time is seconds. All `sleep` calls should depend on this tick.
+# It might be in a wide range, e.g. between 0.001 and 10 seconds.
 tick = 0.5
+# folder + file name for backup files (.tsv and .json). Don't include the extension at the end
+backup = backup/backup
 
 [job]
 # The max length of an identifier of a process (+few digits will be added on the right)
 max_id_length = 42
+
+[tests]
+# temporary folder for the results of tests
+tmp_folder = tmp
